--- a/DownloadsCleanerGUI/MainWindow.xaml
+++ b/DownloadsCleanerGUI/MainWindow.xaml
@@ -428,15 +428,15 @@
                         </StackPanel>
                     </RadioButton.Content>
                 </RadioButton>
-                <Button x:Name="ConfirmServiceButton" Content="Confirm Settings" Grid.Column="0" Width="120" Height="40" Grid.Row="4" Margin="0, 25, 0, 0"/>
+                <Button x:Name="ConfirmServiceButton" Content="Confirm Settings" Grid.Column="0" Width="120" Height="40" Grid.Row="4" Margin="0, 25, 0, 0" Click="ConfirmServiceButton_Click"/>
             </Grid>
             <Grid Grid.Row="3" Margin="0, 40, 0, 0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Button x:Name="StartServiceButton" Content="Start Service" Grid.Column="0" Width="120" Height="40" />
-                <Button x:Name="StopServiceButton" Content="Stop Service" Grid.Column="1" Width="120" Height="40"/>
+                <Button x:Name="StartServiceButton" Content="Start Service" Grid.Column="0" Width="120" Height="40" Click="StartServiceButton_Click" />
+                <Button x:Name="StopServiceButton" Content="Stop Service" Grid.Column="1" Width="120" Height="40" Click="StopServiceButton_Click"/>
             </Grid>
             <TextBlock Grid.Row="4" Text="Service is currently stoped." Name="ServiceInfoTB" FontSize="16" Foreground="White" Margin="10, 10"/>
         </Grid>
